--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       content="Portfolio Website"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Arunima's Portfolio</title>
+    <title>Dishnat's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
